# KDRA

./: README.md  kg_visualization.html  llm_config.yaml  notebook.md  proposal.md  pyproject.toml  run_qa.py  test_async.py  test_chunker.py  test_extractor.py  test_meta.py  test_normalizer.py  test_pdf.py  test_qa_planner.py
data/: attention.txt
kdra/: __init__.py
kdra.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
kdra/core/: __init__.py
kdra/core/ingestion/: __init__.py  chunker.py  loader.py  metadata.py
kdra/core/kg/: __init__.py  builder.py  storage.py
kdra/core/ontology/: __init__.py  normalizer.py
kdra/core/reasoning/: __init__.py  comparator.py  dummy.py  engine.py  extractor.py  ner.py  prompts.py  qa.py
kdra/core/retrieval/: __init__.py  base.py  dummy.py  external.py  simple.py  vector.py
kdra/core/schemas/: __init__.py  base.py
kdra/evaluation/: evaluator.py
kdra/pipeline/: __init__.py  orchestrator.py  run_topic.py
kdra/scripts/: __init__.py  demo.py  evaluate.py  quick_eval.py
kdra/tests/: __init__.py
kdra/viz/: __init__.py  app.py
output/: evaluation_report.json  extractions.json  insights.json  knowledge_graph.json  output.txt
